BACKLOG-20958 Fix package hierarchy